# BQ40Z80_Display

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
components/bq40z80/: CMakeLists.txt  bq40z80.cpp
components/bq40z80/include/: bq40z80.h  bq40z80_mfa.h  bq40z80_sbs.h
main/: CMakeLists.txt  gui_task.cpp  i2c_task.cpp  main copy  main.cpp  main.h  touch_task.cpp
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
ui/fonts/: ui_font_DINMedium16.c  ui_font_DINMedium32.c  ui_font_DINMedium34.c  ui_font_GoogleSansMedium10.c  ui_font_GoogleSansMedium12.c  ui_font_GoogleSansMedium13.c  ui_font_GoogleSansMedium15.c  ui_font_GoogleSansMedium16.c
ui/images/: ui_img_4_png.c  ui_img_6_png.c  ui_img_7_png.c
ui/screens/: ui_Details.c  ui_Overview.c
ui_sources/: SquareLine_Project.sll  SquareLine_Project.spj
ui_sources/assets/: ui_font_DINMedium14.c  ui_font_DINMedium14.fcfg  ui_font_DINMedium16.fcfg  ui_font_DINMedium32.fcfg  ui_font_DINMedium34.fcfg  ui_font_GoogleSansMedium10.fcfg  ui_font_GoogleSansMedium12.fcfg  ui_font_GoogleSansMedium13.fcfg  ui_font_GoogleSansMedium14.c  ui_font_GoogleSansMedium14.fcfg  ui_font_GoogleSansMedium15.fcfg  ui_font_GoogleSansMedium16.fcfg  ui_font_GoogleSansMedium22.c  ui_font_GoogleSansMedium22.fcfg
