idf_component_register(SRCS "touch_task.cpp" "gui_task.cpp" "i2c_task.cpp" "main.cpp"
                            "../ui/ui.c" 
                            "../ui/ui_helpers.c"
                            "../ui/components/ui_comp_hook.c"
                            "../ui/screens/ui_Overview.c"
                            "../ui/screens/ui_Details.c"
                            "../ui/fonts/ui_font_DINMedium14.c"
                            "../ui/fonts/ui_font_DINMedium16.c"
                            "../ui/fonts/ui_font_DINMedium32.c"
                            "../ui/fonts/ui_font_DINMedium34.c"
                            "../ui/fonts/ui_font_GoogleSansMedium10.c"  
                            "../ui/fonts/ui_font_GoogleSansMedium12.c"  
                            "../ui/fonts/ui_font_GoogleSansMedium13.c"  
                            "../ui/fonts/ui_font_GoogleSansMedium14.c"  
                            "../ui/fonts/ui_font_GoogleSansMedium15.c"   
                            "../ui/fonts/ui_font_GoogleSansMedium16.c"   
                            "../ui/fonts/ui_font_GoogleSansMedium22.c"   
                            "../ui/images/ui_img_4_png.c"   
                            "../ui/images/ui_img_7_png.c"   

                       INCLUDE_DIRS "." "../ui")